WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191415
U+180E is no longer a whitespace character
https://bugs.webkit.org/show_bug.cgi?id=191415
Summary
U+180E is no longer a whitespace character
Ross Kirsling
Reported
2018-11-07 21:48:09 PST
U+180E is no longer a whitespace character
Attachments
Patch
(15.41 KB, patch)
2018-11-07 22:59 PST
,
Ross Kirsling
no flags
Details
Formatted Diff
Diff
Patch
(20.97 KB, patch)
2018-11-07 23:54 PST
,
Ross Kirsling
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews100 for mac-sierra
(2.48 MB, application/zip)
2018-11-08 01:09 PST
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews104 for mac-sierra-wk2
(3.12 MB, application/zip)
2018-11-08 01:17 PST
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews121 for ios-simulator-wk2
(2.51 MB, application/zip)
2018-11-08 01:50 PST
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews202 for win-future
(12.86 MB, application/zip)
2018-11-08 01:54 PST
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews114 for mac-sierra
(3.39 MB, application/zip)
2018-11-08 02:00 PST
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews115 for mac-sierra
(3.52 MB, application/zip)
2018-11-08 03:55 PST
,
EWS Watchlist
no flags
Details
Patch
(32.47 KB, patch)
2018-11-08 10:30 PST
,
Ross Kirsling
no flags
Details
Formatted Diff
Diff
Show Obsolete
(8)
View All
Add attachment
proposed patch, testcase, etc.
Ross Kirsling
Comment 1
2018-11-07 22:59:16 PST
Created
attachment 354209
[details]
Patch
Ross Kirsling
Comment 2
2018-11-07 23:01:01 PST
Discovered via
https://test262.report/browse/language/white-space
. :)
Ross Kirsling
Comment 3
2018-11-07 23:54:06 PST
Created
attachment 354211
[details]
Patch
Ross Kirsling
Comment 4
2018-11-08 00:12:27 PST
***
Bug 126608
has been marked as a duplicate of this bug. ***
EWS Watchlist
Comment 5
2018-11-08 01:09:23 PST
Comment hidden (obsolete)
Comment on
attachment 354211
[details]
Patch
Attachment 354211
[details]
did not pass mac-ews (mac): Output:
https://webkit-queues.webkit.org/results/9905843
New failing tests: sputnik/Unicode/Unicode_500/S15.10.2.12_A1_T6.html sputnik/Conformance/15_Native_Objects/15.1_The_Global_Object/15.1.2/15.1.2.2_parseInt/S15.1.2.2_A2_T10.html sputnik/Unicode/Unicode_410/S15.10.2.12_A1_T6.html sputnik/Conformance/09_Type_Conversion/9.3_ToNumber/9.3.1_ToNumber_from_String/S9.3.1_A3_T1.html sputnik/Conformance/09_Type_Conversion/9.3_ToNumber/9.3.1_ToNumber_from_String/S9.3.1_A3_T2.html sputnik/Conformance/15_Native_Objects/15.10_RegExp/15.10.2/15.10.2.12_CharacterClassEscape/S15.10.2.12_A1_T1.html sputnik/Unicode/Unicode_500/S15.10.2.12_A2_T6.html sputnik/Unicode/Unicode_410/S7.2_A1.6_T1.html sputnik/Unicode/Unicode_510/S7.2_A1.6_T1.html sputnik/Unicode/Unicode_500/S7.2_A1.6_T1.html sputnik/Conformance/09_Type_Conversion/9.3_ToNumber/9.3.1_ToNumber_from_String/S9.3.1_A2.html sputnik/Unicode/Unicode_510/S15.10.2.12_A2_T6.html sputnik/Unicode/Unicode_410/S15.10.2.12_A2_T6.html sputnik/Conformance/15_Native_Objects/15.1_The_Global_Object/15.1.2/15.1.2.3_parseFloat/S15.1.2.3_A2_T10.html sputnik/Unicode/Unicode_510/S15.10.2.12_A1_T6.html sputnik/Conformance/15_Native_Objects/15.10_RegExp/15.10.2/15.10.2.12_CharacterClassEscape/S15.10.2.12_A2_T1.html
EWS Watchlist
Comment 6
2018-11-08 01:09:25 PST
Comment hidden (obsolete)
Created
attachment 354215
[details]
Archive of layout-test-results from ews100 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 7
2018-11-08 01:17:12 PST
Comment hidden (obsolete)
Comment on
attachment 354211
[details]
Patch
Attachment 354211
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/9905849
New failing tests: sputnik/Unicode/Unicode_500/S15.10.2.12_A1_T6.html sputnik/Conformance/15_Native_Objects/15.1_The_Global_Object/15.1.2/15.1.2.2_parseInt/S15.1.2.2_A2_T10.html sputnik/Unicode/Unicode_410/S15.10.2.12_A1_T6.html sputnik/Conformance/09_Type_Conversion/9.3_ToNumber/9.3.1_ToNumber_from_String/S9.3.1_A3_T1.html sputnik/Conformance/09_Type_Conversion/9.3_ToNumber/9.3.1_ToNumber_from_String/S9.3.1_A3_T2.html sputnik/Conformance/15_Native_Objects/15.10_RegExp/15.10.2/15.10.2.12_CharacterClassEscape/S15.10.2.12_A1_T1.html sputnik/Unicode/Unicode_500/S15.10.2.12_A2_T6.html sputnik/Unicode/Unicode_410/S7.2_A1.6_T1.html sputnik/Unicode/Unicode_510/S7.2_A1.6_T1.html sputnik/Unicode/Unicode_500/S7.2_A1.6_T1.html sputnik/Conformance/09_Type_Conversion/9.3_ToNumber/9.3.1_ToNumber_from_String/S9.3.1_A2.html sputnik/Unicode/Unicode_510/S15.10.2.12_A2_T6.html sputnik/Unicode/Unicode_410/S15.10.2.12_A2_T6.html sputnik/Conformance/15_Native_Objects/15.1_The_Global_Object/15.1.2/15.1.2.3_parseFloat/S15.1.2.3_A2_T10.html sputnik/Unicode/Unicode_510/S15.10.2.12_A1_T6.html sputnik/Conformance/15_Native_Objects/15.10_RegExp/15.10.2/15.10.2.12_CharacterClassEscape/S15.10.2.12_A2_T1.html
EWS Watchlist
Comment 8
2018-11-08 01:17:15 PST
Comment hidden (obsolete)
Created
attachment 354216
[details]
Archive of layout-test-results from ews104 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 9
2018-11-08 01:50:38 PST
Comment hidden (obsolete)
Comment on
attachment 354211
[details]
Patch
Attachment 354211
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
https://webkit-queues.webkit.org/results/9905907
New failing tests: sputnik/Unicode/Unicode_500/S15.10.2.12_A1_T6.html sputnik/Conformance/15_Native_Objects/15.1_The_Global_Object/15.1.2/15.1.2.2_parseInt/S15.1.2.2_A2_T10.html sputnik/Unicode/Unicode_410/S15.10.2.12_A1_T6.html sputnik/Conformance/09_Type_Conversion/9.3_ToNumber/9.3.1_ToNumber_from_String/S9.3.1_A3_T1.html sputnik/Conformance/09_Type_Conversion/9.3_ToNumber/9.3.1_ToNumber_from_String/S9.3.1_A3_T2.html sputnik/Conformance/15_Native_Objects/15.1_The_Global_Object/15.1.2/15.1.2.3_parseFloat/S15.1.2.3_A2_T10.html sputnik/Unicode/Unicode_500/S15.10.2.12_A2_T6.html sputnik/Unicode/Unicode_410/S7.2_A1.6_T1.html sputnik/Unicode/Unicode_510/S7.2_A1.6_T1.html sputnik/Unicode/Unicode_500/S7.2_A1.6_T1.html sputnik/Conformance/09_Type_Conversion/9.3_ToNumber/9.3.1_ToNumber_from_String/S9.3.1_A2.html sputnik/Unicode/Unicode_510/S15.10.2.12_A2_T6.html sputnik/Unicode/Unicode_510/S15.10.2.12_A1_T6.html sputnik/Conformance/15_Native_Objects/15.10_RegExp/15.10.2/15.10.2.12_CharacterClassEscape/S15.10.2.12_A1_T1.html sputnik/Unicode/Unicode_410/S15.10.2.12_A2_T6.html sputnik/Conformance/15_Native_Objects/15.10_RegExp/15.10.2/15.10.2.12_CharacterClassEscape/S15.10.2.12_A2_T1.html
EWS Watchlist
Comment 10
2018-11-08 01:50:40 PST
Comment hidden (obsolete)
Created
attachment 354223
[details]
Archive of layout-test-results from ews121 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews121 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 11
2018-11-08 01:54:03 PST
Comment hidden (obsolete)
Comment on
attachment 354211
[details]
Patch
Attachment 354211
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/9905971
New failing tests: sputnik/Unicode/Unicode_500/S15.10.2.12_A1_T6.html sputnik/Conformance/15_Native_Objects/15.1_The_Global_Object/15.1.2/15.1.2.2_parseInt/S15.1.2.2_A2_T10.html sputnik/Unicode/Unicode_410/S15.10.2.12_A1_T6.html sputnik/Conformance/09_Type_Conversion/9.3_ToNumber/9.3.1_ToNumber_from_String/S9.3.1_A3_T1.html sputnik/Conformance/09_Type_Conversion/9.3_ToNumber/9.3.1_ToNumber_from_String/S9.3.1_A3_T2.html sputnik/Conformance/15_Native_Objects/15.1_The_Global_Object/15.1.2/15.1.2.3_parseFloat/S15.1.2.3_A2_T10.html sputnik/Unicode/Unicode_500/S15.10.2.12_A2_T6.html sputnik/Unicode/Unicode_410/S7.2_A1.6_T1.html sputnik/Unicode/Unicode_510/S7.2_A1.6_T1.html sputnik/Unicode/Unicode_500/S7.2_A1.6_T1.html sputnik/Conformance/09_Type_Conversion/9.3_ToNumber/9.3.1_ToNumber_from_String/S9.3.1_A2.html sputnik/Unicode/Unicode_510/S15.10.2.12_A2_T6.html sputnik/Unicode/Unicode_410/S15.10.2.12_A2_T6.html sputnik/Conformance/15_Native_Objects/15.10_RegExp/15.10.2/15.10.2.12_CharacterClassEscape/S15.10.2.12_A1_T1.html sputnik/Unicode/Unicode_510/S15.10.2.12_A1_T6.html sputnik/Conformance/15_Native_Objects/15.10_RegExp/15.10.2/15.10.2.12_CharacterClassEscape/S15.10.2.12_A2_T1.html
EWS Watchlist
Comment 12
2018-11-08 01:54:15 PST
Comment hidden (obsolete)
Created
attachment 354224
[details]
Archive of layout-test-results from ews202 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews202 Port: win-future Platform: CYGWIN_NT-6.1-2.10.0-0.325-5-3-x86_64-64bit
EWS Watchlist
Comment 13
2018-11-08 02:00:36 PST
Comment hidden (obsolete)
Comment on
attachment 354211
[details]
Patch
Attachment 354211
[details]
did not pass mac-debug-ews (mac): Output:
https://webkit-queues.webkit.org/results/9905913
New failing tests: sputnik/Unicode/Unicode_500/S15.10.2.12_A1_T6.html sputnik/Conformance/15_Native_Objects/15.1_The_Global_Object/15.1.2/15.1.2.2_parseInt/S15.1.2.2_A2_T10.html sputnik/Unicode/Unicode_410/S15.10.2.12_A1_T6.html sputnik/Conformance/09_Type_Conversion/9.3_ToNumber/9.3.1_ToNumber_from_String/S9.3.1_A3_T1.html sputnik/Conformance/09_Type_Conversion/9.3_ToNumber/9.3.1_ToNumber_from_String/S9.3.1_A3_T2.html sputnik/Conformance/15_Native_Objects/15.10_RegExp/15.10.2/15.10.2.12_CharacterClassEscape/S15.10.2.12_A1_T1.html sputnik/Unicode/Unicode_500/S15.10.2.12_A2_T6.html sputnik/Unicode/Unicode_410/S7.2_A1.6_T1.html sputnik/Unicode/Unicode_510/S7.2_A1.6_T1.html sputnik/Unicode/Unicode_500/S7.2_A1.6_T1.html sputnik/Conformance/09_Type_Conversion/9.3_ToNumber/9.3.1_ToNumber_from_String/S9.3.1_A2.html sputnik/Unicode/Unicode_510/S15.10.2.12_A2_T6.html sputnik/Unicode/Unicode_410/S15.10.2.12_A2_T6.html sputnik/Conformance/15_Native_Objects/15.1_The_Global_Object/15.1.2/15.1.2.3_parseFloat/S15.1.2.3_A2_T10.html sputnik/Unicode/Unicode_510/S15.10.2.12_A1_T6.html sputnik/Conformance/15_Native_Objects/15.10_RegExp/15.10.2/15.10.2.12_CharacterClassEscape/S15.10.2.12_A2_T1.html
EWS Watchlist
Comment 14
2018-11-08 02:00:37 PST
Comment hidden (obsolete)
Created
attachment 354225
[details]
Archive of layout-test-results from ews114 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews114 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 15
2018-11-08 03:55:04 PST
Comment hidden (obsolete)
Comment on
attachment 354211
[details]
Patch
Attachment 354211
[details]
did not pass mac-debug-ews (mac): Output:
https://webkit-queues.webkit.org/results/9907170
New failing tests: sputnik/Unicode/Unicode_500/S15.10.2.12_A1_T6.html sputnik/Conformance/15_Native_Objects/15.1_The_Global_Object/15.1.2/15.1.2.2_parseInt/S15.1.2.2_A2_T10.html sputnik/Unicode/Unicode_410/S15.10.2.12_A1_T6.html sputnik/Conformance/09_Type_Conversion/9.3_ToNumber/9.3.1_ToNumber_from_String/S9.3.1_A3_T1.html sputnik/Conformance/09_Type_Conversion/9.3_ToNumber/9.3.1_ToNumber_from_String/S9.3.1_A3_T2.html sputnik/Conformance/15_Native_Objects/15.1_The_Global_Object/15.1.2/15.1.2.3_parseFloat/S15.1.2.3_A2_T10.html sputnik/Unicode/Unicode_500/S15.10.2.12_A2_T6.html sputnik/Unicode/Unicode_410/S7.2_A1.6_T1.html sputnik/Unicode/Unicode_510/S7.2_A1.6_T1.html sputnik/Unicode/Unicode_500/S7.2_A1.6_T1.html sputnik/Conformance/09_Type_Conversion/9.3_ToNumber/9.3.1_ToNumber_from_String/S9.3.1_A2.html sputnik/Unicode/Unicode_510/S15.10.2.12_A2_T6.html sputnik/Unicode/Unicode_510/S15.10.2.12_A1_T6.html sputnik/Conformance/15_Native_Objects/15.10_RegExp/15.10.2/15.10.2.12_CharacterClassEscape/S15.10.2.12_A1_T1.html sputnik/Unicode/Unicode_410/S15.10.2.12_A2_T6.html sputnik/Conformance/15_Native_Objects/15.10_RegExp/15.10.2/15.10.2.12_CharacterClassEscape/S15.10.2.12_A2_T1.html
EWS Watchlist
Comment 16
2018-11-08 03:55:06 PST
Comment hidden (obsolete)
Created
attachment 354232
[details]
Archive of layout-test-results from ews115 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews115 Port: mac-sierra Platform: Mac OS X 10.12.6
Ross Kirsling
Comment 17
2018-11-08 10:30:24 PST
Created
attachment 354248
[details]
Patch
Ross Kirsling
Comment 18
2018-11-08 12:42:45 PST
This should be good now -- sorry about the layout test spam. 😅
Saam Barati
Comment 19
2018-11-08 14:38:28 PST
Comment on
attachment 354248
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=354248&action=review
r=me
> Source/JavaScriptCore/parser/Lexer.h:241 > ALWAYS_INLINE bool Lexer<UChar>::isWhiteSpace(UChar ch)
Can we combine this w/ isStrWhiteSpace somehow inside ParseInt.h?
Ross Kirsling
Comment 20
2018-11-08 15:14:42 PST
(In reply to Saam Barati from
comment #19
)
> Comment on
attachment 354248
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=354248&action=review
> > r=me > > > Source/JavaScriptCore/parser/Lexer.h:241 > > ALWAYS_INLINE bool Lexer<UChar>::isWhiteSpace(UChar ch) > > Can we combine this w/ isStrWhiteSpace somehow inside ParseInt.h?
Good point -- created
bug 191439
to track this.
WebKit Commit Bot
Comment 21
2018-11-08 15:40:34 PST
Comment on
attachment 354248
[details]
Patch Clearing flags on attachment: 354248 Committed
r238004
: <
https://trac.webkit.org/changeset/238004
>
WebKit Commit Bot
Comment 22
2018-11-08 15:40:36 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 23
2018-11-08 15:41:29 PST
<
rdar://problem/45926530
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug