U+180E is no longer a whitespace character https://bugs.webkit.org/show_bug.cgi?id=191415

Reviewed by Saam Barati.

JSTests:

* ChakraCore/test/es5/regexSpace.baseline:
* ChakraCore/test/es6/unicode_whitespace.js:
Update tests to latest version.
(See https://github.com/Microsoft/ChakraCore/commit/7c097b698de1e400286f9b957597b2a81fc6f80b.)

* test262.yaml:
* test262/config.yaml:
* test262/expectations.yaml:
Update expectations.

Source/JavaScriptCore:

Mongolian Vowel Separator stopped being a valid whitespace character as of ES2016.
(https://github.com/tc39/ecma262/pull/300)

* parser/Lexer.h:
(JSC::Lexer<UChar>::isWhiteSpace):
* runtime/ParseInt.h:
(JSC::isStrWhiteSpace):
* yarr/create_regex_tables:

LayoutTests:

* js/ToNumber-expected.txt:
* js/parseFloat-expected.txt:
* js/script-tests/ToNumber.js:
* js/script-tests/parseFloat.js:
Update tests and expectations.

* sputnik/Conformance/09_Type_Conversion/9.3_ToNumber/9.3.1_ToNumber_from_String/S9.3.1_A2-expected.txt:
* sputnik/Conformance/09_Type_Conversion/9.3_ToNumber/9.3.1_ToNumber_from_String/S9.3.1_A3_T1-expected.txt:
* sputnik/Conformance/09_Type_Conversion/9.3_ToNumber/9.3.1_ToNumber_from_String/S9.3.1_A3_T2-expected.txt:
* sputnik/Conformance/15_Native_Objects/15.10_RegExp/15.10.2/15.10.2.12_CharacterClassEscape/S15.10.2.12_A1_T1-expected.txt:
* sputnik/Conformance/15_Native_Objects/15.10_RegExp/15.10.2/15.10.2.12_CharacterClassEscape/S15.10.2.12_A2_T1-expected.txt:
* sputnik/Conformance/15_Native_Objects/15.1_The_Global_Object/15.1.2/15.1.2.2_parseInt/S15.1.2.2_A2_T10-expected.txt:
* sputnik/Conformance/15_Native_Objects/15.1_The_Global_Object/15.1.2/15.1.2.3_parseFloat/S15.1.2.3_A2_T10-expected.txt:
* sputnik/Unicode/Unicode_410/S15.10.2.12_A1_T6-expected.txt:
* sputnik/Unicode/Unicode_410/S15.10.2.12_A2_T6-expected.txt:
* sputnik/Unicode/Unicode_410/S7.2_A1.6_T1-expected.txt:
* sputnik/Unicode/Unicode_500/S15.10.2.12_A1_T6-expected.txt:
* sputnik/Unicode/Unicode_500/S15.10.2.12_A2_T6-expected.txt:
* sputnik/Unicode/Unicode_500/S7.2_A1.6_T1-expected.txt:
* sputnik/Unicode/Unicode_510/S15.10.2.12_A1_T6-expected.txt:
* sputnik/Unicode/Unicode_510/S15.10.2.12_A2_T6-expected.txt:
* sputnik/Unicode/Unicode_510/S7.2_A1.6_T1-expected.txt:
Let outdated sputnik checks fail.


Canonical link: https://commits.webkit.org/206223@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238004 268f45cc-cd09-0410-ab3c-d52691b4dbfc