Source/JavaScriptCore/runtime/ParseInt.h
@@ -110,7 +110,6 @@ ALWAYS_INLINE static bool isStrWhiteSpace(UChar c)
     case 0x000D:
     case 0x0020:
     case 0x00A0:
-    case 0x180E: // This character used to be in Zs category before Unicode 6.3, and EcmaScript says that we should keep treating it as such.
     case 0x2028:
     case 0x2029:
     case 0xFEFF:
